v0.26.0 2026-02-17: Security and validation in Auth and Quiz:
- Validation functions added:
    - validateEmail, validatePassword, validateUsername.
    - validateQuiz, validateQuestion.
- Rule management in controlled inputs:
     - AuthInput and EditInput now control changes and errors correctly.
- Prevention of submissions with empty data in forms:
      - login, register, createUser, createQuiz, editQuiz (editUser pending).
- Synchronisation of touched and submitted to show errors only when appropriate.
- Improved UX in QuizForm/QuizEdit:
      - Controlled inputs and radio buttons for questions.
      - Option and question errors rendered correctly.

*! Preparation to handle pre-existing quizzes and questions from the database without inconsistencies.*
