# backend/src/swagger/schemas/quizSchema.yaml
@@ -5,7 +5,6 @@ components:
       required:
         - title
         - creatorId
-        - courseId
       properties:
         _id:
           type: ObjectId
@@ -60,9 +59,6 @@ components:
         creatorId:
           $ref: '#/components/schemas/User'
           description: The user who created the quiz.
-        courseId:
-          $ref: '#/components/schemas/Course'
-          description: The course to which the quiz belongs.
         questionIds:
           type: array
           description: The list of questions in the quiz.
